--- a/blocks/partners/__container/partners__container.css
+++ b/blocks/partners/__container/partners__container.css
@@ -6,6 +6,7 @@
   height: 170px;
   width: 100%;
   overflow-x: scroll;
+  overflow-y: hidden;
   scrollbar-width: none;
 }
 
